# MakePlayList

./: CMakeLists.txt  LICENSE.txt  MakePlayList.bat  MakePlayList.iss  MakePlayList.ps1  MakePlayList.qrc  MakePlayList.qss  MakePlayList.rc  MakePlayList.rc.in  README.md  about_dialog.cpp  about_dialog.h  about_dialog.ui  filediredit.cpp  filediredit.h  filelist.cpp  filelist.h  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plsfiles.cpp  plsfiles.h
